 - URILoader.Load() can sometimes swallow exceptions (CORE-391)
 - Timeout (and other request options) was not honoured for asynchronous queries and updates using SparqlRemoteEndpoint and SparqlRemoteUpdateEndpoint (CORE-393)
 - Fix a bug in handling Fragment Identifier in Graph URIs for SPARQL Graph Store protocol based stores like Fuseki (CORE-394)
- Documentation
 - Minor tweak to Timeout properties to ensure all explicitly state that the unit is milliseconds (CORE-387)
- Query
 - SparqlResultSet can now be created from an IEnumerable<SparqlResult> instances (CORE-383)
- Storage
 - Add native SPARQL Update support to StardogV2Connector (CORE-376)

Removed

1.0.2
-----

Added

Changed
- Bug Fixes
 - Possible OOM when stream parsing large RDF/XML files (CORE-378)
 - Fix a bug with transactions being left open in some cases when using VirtuosoManager (VIRT-382)
- NuGet
 - Fixed packaging to ensure the Portable Class Library builds are included

Removed
- Marked as obsolete unusable the obsoleted ICharFormatter.FormatChar() method

1.0.1
-----

Added
- Portable Class Library builds are now included (CORE-303)
 - Note that synchronous APIs for some functionality are not supported in the PCL builds (CORE-371)
- Formatting API
 - Add new more efficient FormatChar() overload to ICharFormatter (CORE-357)
- Query
 - First version of new Fluent Query builder API (CORE-260)
- Global Options
 - Add new DefaultCulture and DefaultComparisonOptions used for lexical ordering of literal values in the cases
   where more natural ordering (e.g. numeric) does not apply (CORE-367)

Changed
- Bug Fixes
 - Fix a bug where SPARQL parsing could incorrectly lose type information for some literals used in expressions
 - Fix a Stack Overflow that could occur in ThreadSafeGraph (CORE-363)
 - Property Path * operator could produce incorrect results (CORE-349)
 - Correct an error message re: extension point in Full Text Indexing (FTXT-366)